# QuizCreator

./: CMakeLists.txt
include/app/: Application.hpp
include/core/: BaseWindow.hpp  Styles.hpp
include/data/: Database.hpp
include/models/: Answer.hpp  Question.hpp  Quiz.hpp  User.hpp  UserResult.hpp
include/repositories/: AnswerRepository.hpp  QuestionRepository.hpp  QuizRepository.hpp  ResultRepository.hpp
include/services/: AuthService.hpp
include/ui/: LoginWindow.hpp  MainMenuWindow.hpp  QuestionEditorWindow.hpp  QuizRunDialog.hpp  QuizRunnerDialog.hpp  QuizSelectDialog.hpp
resources/: resources.qrc
resources/styles/: modern.qss
src/: main.cpp
src/app/: Application.cpp
src/core/: BaseWindow.cpp  Styles.cpp
src/data/: Database.cpp
src/models/: User.cpp
src/repositories/: AnswerRepository.cpp  QuestionRepository.cpp  QuizRepository.cpp  ResultRepository.cpp
src/services/: AuthService.cpp
src/ui/: LoginWindow.cpp  MainMenuWindow.cpp  QuestionEditorWindow.cpp  QuizRunDialog.cpp  QuizRunnerDialog.cpp  QuizSelectDialog.cpp
